responsive fixes for horizontal scroll, tablet nav fixes

--- a/assets/css/_scaffolding.styl
+++ b/assets/css/_scaffolding.styl
@@ -24,8 +24,6 @@ section
   
   +below(992px)
     padding:0 1rem
-    &.no-responsive-padding
-      padding:0
 
   img, svg
     max-width:100%
